--- a/package.json
+++ b/package.json
@@ -10,15 +10,27 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.7.8",
+    "axios": "^0.26.1",
     "core-js": "^3.19.3",
+    "element-ui": "^2.15.6",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "nuxt": "^2.15.8",
+    "postcss-px2rem": "^0.3.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0"
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/proxy": "^2.1.0",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^7.0.3"
   },
   "config": {
     "commitizen": {
