--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "ant-design-vue": "^1.7.8",
     "axios": "^0.26.1",
     "core-js": "^3.19.3",
+    "cosmiconfig": "^7.0.1",
     "element-ui": "^2.15.6",
     "less": "^4.1.2",
-    "less-loader": "^10.2.0",
+    "less-loader": "^7.3.0",
     "nuxt": "^2.15.8",
     "postcss-px2rem": "^0.3.0",
+    "vant": "^2.12.46",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
@@ -29,8 +31,8 @@
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "cz-conventional-changelog": "^3.3.0",
-    "node-sass": "^7.0.1",
-    "sass-loader": "^7.0.3"
+    "sass": "^1.49.11",
+    "sass-loader": "^10.1.1"
   },
   "config": {
     "commitizen": {
